--- a/MyViewAndViews/app/src/main/AndroidManifest.xml
+++ b/MyViewAndViews/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mobile.myviewandviews">
+    package="com.example.myviewandview">
 
     <application
         android:allowBackup="true"
